--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <link rel="stylesheet" href="style.css">
+    <title>App Con Immagine di Sfondo</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form id="login-form">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
-    </form>
-    <p id="login-status"></p>
-    <div id="user-info" style="display: none;">
-        <p>Welcome, <span id="user-name"></span>!</p>
-        <button id="logout-button">Logout</button>
+    <div class="container">
+        <h1>Il Tuo Titolo Centrale</h1>
+        <div class="background-image"></div>
+        <div class="content">
+            <input type="text" id="inputField" placeholder="Inserisci il testo">
+            <button id="submitButton">Invia</button>
+        </div>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
