--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Il Tuo Titolo Centrale</h1>
+        <h1>Sushi and friends</h1>
+        <div class="signature">By Versa</div>
         <div class="background-image"></div>
         <div class="content">
-            <input type="text" id="inputField" placeholder="Inserisci il testo">
-            <button id="submitButton">Invia</button>
+            <input type="text" id="inputField" placeholder="Il tuo nome">
+            <button id="submitButton">Vai</button>
         </div>
     </div>
     <script src="script.js"></script>
