--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <input type="text" id="inputField" placeholder="Il tuo nome">
             <button id="submitButton">Vai</button>
-            <p id="errorMessage" class="error-message">Per favore, inserisci un nome</p> <!-- Aggiunto elemento di avviso -->
+            <p id="errorMessage" class="error-message"></p> <!-- Aggiunto elemento di avviso -->
     
         </div>
     </div>
