--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
             <input type="text" id="inputField" placeholder="Il tuo nome">
             <button id="submitButton">Vai</button>
             <p id="errorMessage" class="error-message"></p> <!-- Aggiunto elemento di avviso -->
-    
         </div>
+
+        <!-- Seconda schermata -->
+        <div class="container">
+            <h1>Il Tuo Titolo Centrale</h1>
+            <div class="signature">By Versa</div>
+            <div class="background-image"></div>
+            <div class="content">
+                <input type="text" id="inputField" placeholder="Inserisci il testo">
+                <button id="submitButton">Invia</button>
+            </div>
+            <div class="second-screen" style="display: none;">
+                <!-- Contenuto della seconda schermata -->
+            </div>
+        </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
