--- a/index.html
+++ b/index.html
@@ -18,19 +18,11 @@
         </div>
 
         <!-- Seconda schermata -->
-        <div class="container">
-            <h1>Il Tuo Titolo Centrale</h1>
-            <div class="signature">By Versa</div>
-            <div class="background-image"></div>
-            <div class="content">
-                <input type="text" id="inputField" placeholder="Inserisci il testo">
-                <button id="submitButton">Invia</button>
-            </div>
-            <div class="second-screen" style="display: none;">
-                <!-- Contenuto della seconda schermata -->
-            </div>
+        <div class="second-screen">
+            <h1>Seconda schermata</h1>
+            <!-- Contenuto della seconda schermata -->
         </div>
-        
+
     </div>
     <script src="script.js"></script>
 </body>
