--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sushi and friends 1</h1>
+        <h1>Sushi and friends Version 2</h1>
         <div class="signature">By Versa</div>
         <div class="background-image"></div>
         <div class="content">
