Aggiornamenti del mio sito

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Registrazione Utente v0</title>
+    <title>Registrazione Utente</title>
 </head>
 <body>
     <div class="container">
-        <h1>Registrazione Utente</h1>
+        <h1>Registrazione Utente v0</h1>
         <form action="register.php" method="post">
             <label for="nickname">Nickname:</label>
             <input type="text" name="nickname" id="nickname" required>
