--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Registrazione Utente</title>
+    <title>Web App</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Registrazione Utente v0</h1>
-        <form action="register.php" method="post">
-            <label for="nickname">Nickname:</label>
-            <input type="text" name="nickname" id="nickname" required>
-            <button type="submit">Registrati</button>
+    <h1>Benvenuto</h1>
+    <form id="loginForm">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" required>
+        <button type="submit">Accedi</button>
+    </form>
+
+    <div id="numberForm" style="display: none;">
+        <h1>Ciao, <span id="userName"></span>! Inserisci dei numeri:</h1>
+        <form>
+            <label for="number">Numero:</label>
+            <input type="number" id="number" required>
+            <button type="button" id="sendNumber">Invia</button>
         </form>
+        <ul id="numberList"></ul>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
