Aggiornamenti del mio sito

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <ul id="numberList"></ul>
     </div>
 
+
+    <div id="feedback" style="display: none;"></div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
